[BUG] mapzone: bug visibility / map rendering [UPD] mapzone: accessibility

--- a/src/control/MapZone.css
+++ b/src/control/MapZone.css
@@ -58,6 +58,9 @@
   height: 5em;
   margin: 0 .2em 0 0;
 }
+.ol-mapzone > div:focus {
+  box-shadow: 0 0 0 0.2em #369;
+}
 .ol-control.ol-mapzone.ol-collapsed > div {
   display: none;
 }
